# orca_descriptors

./: .gitignore  .orca_benchmark.json  Makefile  README.md  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.carthess  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.cpscfdata.tmp.0  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.densities  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.densitiesinfo  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.diise.tmp.0  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.hostnames  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.opt  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.propint.tmp.0  orca_3cc40f7e7e46c74b4a4a537ea2902da0090c4c04d6a270ca0e30711c4891b9cc.soscfv.tmp.0  pyproject.toml  pytest.ini
.github/workflows/: README.md  docs.yml  publish.yml
docs/: .gitignore  CNAME  README.md
docs/_static/: language_switcher.js
docs/en/: batch_processing.rst  benchmark.rst  changelog.rst  cli.rst  conf.py  descriptors.rst  index.rst  tutorial.rst
docs/ru/: Makefile  batch_processing.rst  changelog.rst  cli.rst  conf.py  index.rst  pandas_tutorial.rst  tutorial.rst
docs/source/: Makefile  conf.py  index.rst  installation.rst  (+1 more)
orca_descriptors/: __init__.py  batch_processing.py  cache.py  calculation.py  cli.py  input_generator.py  orca.py  output_parser.py  time_estimator.py
scripts/: run_benchmark.py
tests/: conftest.py  test_pre_optimize.py  test_remote_cache.py  test_semi_empirical.py
(+120 files in other folders)
